# slurm-monitor

./: LICENSE.txt  READMD.md  README.md  pyproject.toml
slurm-monitor/: README.md  pyproject.toml
slurm-monitor/src/slurm_monitor/: __init__.py
src/slurm_monitor/: __about__.py  _textual.py  cli.py  cmd.py  format.py  gpustat.py  parse.py  style.tcss  text.py  utils.py
